--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,8 @@ environment:
     secure: 9XT9DbxNb81Zu8pY3GtvdA==
 build_script:
 - cmd: >-
-    git clone --depth=1 --branch=%APPVEYOR_REPO_BRANCH% https://github.com/ModOrganizer2/modorganizer-umbrella.git c:\projects\modorganizer-umbrella 2> $null
+    git clone --depth=1 https://github.com/ModOrganizer2/modorganizer-umbrella.git c:\projects\modorganizer-umbrella 2> $null
+    git checkout $(git show-ref --verify --quiet refs/remotes/origin/%APPVEYOR_REPO_BRANCH% || echo '-b') %APPVEYOR_REPO_BRANCH%
 
     mkdir c:\projects\modorganizer-build -type directory
 
