--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,7 +8,7 @@ environment:
     secure: 9XT9DbxNb81Zu8pY3GtvdA==
 build_script:
 - pwsh: >-
-    git clone --depth=1 https://github.com/ModOrganizer2/modorganizer-umbrella.git c:\projects\modorganizer-umbrella
+    git clone --depth=1 --no-single-branch https://github.com/ModOrganizer2/modorganizer-umbrella.git c:\projects\modorganizer-umbrella
 
     New-Item -ItemType Directory -Path c:\projects\modorganizer-build
 
